Header height icluded for link section scroll, about section cropped faces (background-image) fixed and banner video removed from mobile.

--- a/src/scss/modules/about-section.scss
+++ b/src/scss/modules/about-section.scss
@@ -35,7 +35,7 @@
 
     @media (min-width: $breakpointMobile) {
         span {
-            min-height: 326px;
+            min-height: 370px;
         }
     }
 
