--- a/src/scss/modules/banner.scss
+++ b/src/scss/modules/banner.scss
@@ -296,7 +296,7 @@
 		height: 100%;
 	}
 
-	@media (max-width: $breakpointMobileMaxMin) {
+	@media (max-width: $breakpointTabletPortraitMin) {
 		display: none;
 	}
 }
